[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'ai4chem'
dynamic = ["version", "description"]
authors = [
    {name = 'Austin Zadoks', email = 'austin.zadoks@epfl.ch'},
    {name = 'Zequan Li', email = 'zequan.li@epfl.ch'},
    {name = 'Nathalie Bui', email = 'nathalie.bui@epfl.ch'},
]
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "scikit-learn",
    "h5py",
    "torch",
    "rdkit",
]

[project.urls]
Home = 'https://github.com/azadoks/ai_for_chemistry'
Source = 'https://github.com/azadoks/ai_for_chemistry'

[tool.flit.module]
name = 'ai4chem'

[tool.flit.sdist]
exclude = [
    '.github/',
    'docs/',
    'examples/',
    'test/',
]

[tool.flynt]
line-length = 120
fail-on-change = true

[tool.isort]
force_sort_within_sections = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    'duplicate-code',
    'import-outside-toplevel',
    'missing-docstring',
    'locally-disabled',
    'too-few-public-methods',
    'too-many-arguments',
    'too-many-instance-attributes',
    'use-dict-literal',
]

[tool.pylint.design]
max-locals=20

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = [
    'test',
]
filterwarnings = [
    'ignore::DeprecationWarning:frozendict:',
]

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = 'google'
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true
indent_dictionary_value = false
split_arguments_when_comma_terminated = true
